# mighty-security

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTION.md  LICENSE  QUICKSTART.md  QUICK_START.md  README.md  main.py  mighty_mcp.py  pyproject.toml  scan_config.json  verify_scanning.py
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml
analyzers/: advanced_mcp_security.py  analyze_mcp_servers.py  comprehensive_mcp_analyzer.py  enhanced_mcp_analyzer.py  industry_aligned_patterns.py  mcp_analyzer_improvements.py  mcp_security_evals.py  mcp_security_evaluator.py  report_formatter.py  shared_constants.py  smart_file_filter.py  sql_injection_patterns.py  standalone_analyzer.py  working_mcp_analyzer.py
analyzers/comprehensive/: behavior.py  dependencies.py  ml.py  progress.py
analyzers/llm/: __init__.py  base_analyzer.py  cerebras_analyzer.py  context_optimizer.py  dynamic_batcher.py  llm_integration.py  multi_pass_analyzer.py  prompts.py
analyzers/security/: credential_rules.py  url_rules.py
analyzers/taint/: call_graph.py  sources_sinks.py  taint_engine.py  types.py
docs/: USAGE_GUIDE.md  architecture-overview.md
examples/malicious_command_injection/: tool.py
examples/policy/: debug_policy_parsing.py  env_protection_config.json  env_protection_demo.py  mcp_enforcement_example.py
examples/safe_mcp_tool/: tool.py
flask-mcp-api/: .env.example  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.sh
hooks/: mcp_security_hooks.py
src/: updater.py
src/analyzers/: __init__.py  (+19 more)
tests/: analyze_cache_issues.py  awesome_mcp_servers_results.json  benchmark_performance.py  benchmark_results.json  comprehensive_test_suite.py  conftest.py  create_test_cases.py  debug_fingerprints.py  debug_os_system.py  debug_security_regression.py  demo_ml_integration.py  enhanced_test_mcp_tool.sh  prompthub_validation.py  run_all_tests.sh  run_dev_tests.sh  test_advanced_taint_analysis.py  test_ast_cache.py  test_ast_cache_integration.py  test_awesome_mcp_servers.py  test_categorization_fix.py  test_cerebras.py  test_comprehensive_integration.py  test_context_filtering.py  test_dependency_graph.py  test_env_protection.py  test_file_prioritizer.py  test_fingerprint_integrity.py  test_integration_context_aware.py  test_llm_comparison.py  test_llm_direct.py  test_mcp_dependency_analyzer.py  test_mcp_prompt_injection.py  test_mcp_vulnerabilities_comprehensive.py  test_ml_security.py  test_parallel_processing.py  test_performance_suite.py  test_real_mcp_servers.py  test_security_not_compromised.py  test_unified_pattern_registry.py  test_with_pytest.py  (+5 more)
(+107 files in other folders)
