[project]
name = "flask-mighty-mcp-server-security"
version = "0.1.0"
description = "Flask API for MCP Security Analyzer"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "requests>=2.31.0",
    "cerebras-cloud-sdk>=1.46.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]
